--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   },
   "dependencies": {
     "eslint": ">=5.16.0"
+  },
+  "scripts": {
+    "lint": "eslint challenges",
+    "format": "prettier --write challenges"
   }
 }
